# minCrypt

./: AUTHORS  ChangeLog  Makefile.am  README  autobuild.sh  configure  configure.ac  mincrypt.spec
docs/: Makefile.am  compiling.html.in  contact.html.in  contributions.html.in  deployment.html.in  downloads.html.in  index.html.in  main.css  mincrypt.css  news.html.in  page.xsl  roadmap.html.in  sitemap.html.in  windows.html.in
examples/: Makefile.am  interface.h  main.cpp  mincrypt-gui  mincrypt.h  utils.cpp
php/: Makefile.am  mincrypt-php.c  mincrypt-php.h  php_mincrypt.h
src/: Makefile.am  Makefile.in  asymmetric.c  base64.c  byteops.c  crc32.c  mincrypt-main.c  mincrypt.c  mincrypt.h
tests/: functions.phpt  runtests.sh  test-asymmetric.phpt  test-asymmetric.sh  test-binary.sh  test-complex.phpt  test-fail.sh  test.tgz
tools/: Makefile  Makefile.am
tools/api-docs/: Makefile  generate-api-docs.c
tools/graph/: Makefile  graph.c
tools/relevance/: Makefile  relevance.c
windows/: Makefile.am  mincrypt-main.c  winmincrypt.c
